# NewWolfLives

./: .gitignore  README.md
prj_vs80/: newwolf.sln  newwolf.vcproj
src/: CMakeLists.txt  Copy of actor_ai.c  Copy of actors.c  Copy of ai_com.c  Copy of automap.c  Copy of cl_input.c  Copy of console.c  Copy of fmopl.c  Copy of gl_draw.c  Copy of map.c  Copy of math.c  Copy of opengl.c  Copy of pwalls.c  Copy of q_fns.c  Copy of r_models.c  act_stat.h  actor_ai.h  actors.c  actors.h  ai_com.h  anorms.h  areas.c  areas.h  audiowl6.h  automap.c  automap.h  build.h  cl_input.c  cl_main.c  client.h  console.c  console.h  doors.c  doors.h  draw.h  fileio.c  fileio.h  fileioo.h  fmopl.h  fontman.c  (+57 more)
src/common/: cmd.c  common.c  common.h  cvar.c  files.c  io_images.c  io_wolf.c  keys.h  models.c  parselib.c
src/libs/jpeglib/: jcmainct.c  jconfig.h  jdmainct.c  jmorecfg.h  jutils.c
src/r_gl/: r_gl.c  r_gl.h
src/scripts/: scr_models.c  scripts.h
src/win32/: afxres.h  gl_win.c  in_win.c  newwolf.aps  newwolf.rc  resource.h  sys_info.c  sys_win.c  vid_win.c  win32.h
